tests/jsr335/Semantics/LambdaTypeAnalysis/AssignmentContext/ShouldFail/syntax01/Test.java

public class Test {
	public interface TestInterface {
		 
	}
	
	public static void main(String[] args) {
		TestInterface t = () -> {};
    }
}
